src/test/deca/context/valid/class/attribute.deca
// Description:
//    Programme valide ayant pour but de tester l'accessibilite d'un attribut publique.
//
// Resultats:
//    1

class MaClasse{
    int a = 1;
}

{
    MaClasse classe = new MaClasse();
    println(classe.a);
}