src/test/deca/context/invalid/fonction/dot-identifier-not-a-class.deca
// Programme qui teste l'appel d'une méthode sur autre chose qu'une classe

class A {
    void method() {}
}

{
    int i;
    i.method();
}